Fixed bug where background was not showing.

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* Elements */
 body {
-  background-image: url("./images/background1.jpg");
+  background-image: url("../images/background1.jpg");
   background-color: #C4F9FF;
 }
 h1, h2, h3 {
